Fix spacing

--- a/src/assets/scss/Header.scss
+++ b/src/assets/scss/Header.scss
@@ -40,7 +40,7 @@ $header-timing: 500ms;
 			right: unset;
 			left: 50%;
 			bottom: 20px;
-			width: 65%;
+			width: 70%;
 
 			a {
 				font-size: 30px;
@@ -74,7 +74,7 @@ $header-timing: 500ms;
 			right: 0%;
 			left: unset;
 			bottom: 10px;
-			width: 55%;
+			width: 60%;
 
 			a {
 				font-size: 28px;
