--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -8,14 +8,14 @@ body {
 body {
 	font-family: 'Lora', serif;
 	font-size: 14px;
-	margin: 220px 0 0; //Space for header
+	margin: 200px 0 0; //Space for header
 	padding: 0;
 	box-sizing: border-box;
 	background: #FFFFFF;
 
 	.container {
 		position: relative;
-		margin: 100px auto 150px;
+		margin: 0 auto;
 		max-width: $container-width;
 		min-height: 700px;
 		padding: 0;
@@ -27,7 +27,7 @@ body {
 			font-size: 40px;
 			color: #777777;
 			text-align: center;
-			margin: 70px 0 50px 0;
+			margin: 30px 0 50px 0;
 			font-weight: normal;
 		}
 
